enable visiblility of move arrow in filemanager, fix #1565

--- a/modules/admin/src/resources/scss/components/_folders.scss
+++ b/modules/admin/src/resources/scss/components/_folders.scss
@@ -18,7 +18,6 @@ $icon-line-height: $icon-font-size + 5px;
     flex-wrap: wrap;
     margin-right: 4px;
     overflow: hidden;
-
     position: relative;
 
     &:not(:first-of-type) {
@@ -40,6 +39,16 @@ $icon-line-height: $icon-font-size + 5px;
 
     .folders-items {
         padding-left: 3px;
+    }
+
+    .is-movable {
+        .folders-label {
+            background-color: map-get($grays, 300);
+        }
+
+        .folders-actions-right {
+            display: block !important;
+        }
     }
 }
 
